--- a/opdracht1.1/index.html
+++ b/opdracht1.1/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Opdracht 1.1</title>
+    <title>Document</title>
 </head>
 <body>
-    <script>
-    var winkelmand = ["Bananen", "Whisky", "Chips", "Bonen", "Aardappelen"];
-    console.log(winkelmand[3])
-    </script>
-    <p id="winkelmand"></p>
-
     <script src="app.js"></script>
+    <script>
+        let winkelmand = [];
+
+        let winkelmand1 = new Array();
+
+        let list = ["Bananen", "Whisky", "Chips", "Bonen", "Aardappelen"];
+    </script>
 </body>
 </html>
