--- a/opdracht5/index.html
+++ b/opdracht5/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Steen Papier Schaar</title>
+    <title>Opdracht 5</title>
 </head>
 <body>
     <h2>Keuze computer: <span id="computer-choice"></span></h2>
