--- a/opdracht6.2/index.html
+++ b/opdracht6.2/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Opdracht 3.3</title>
+    <title>Opdracht 6.2</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="div"></div>
+    <canvas id="canvas" width="480" height="360"></canvas>
 
     <script src="app.js"></script>
 </body>
